notes for Reack Hooks Workshops

--- a/1. React Fundamentals/6. Forms.md
+++ b/1. React Fundamentals/6. Forms.md
@@ -43,7 +43,7 @@ Using a ref is not always adviced and we will discover why in next workshop.
 ## Validating input via `useState`
 When we change a ref we **do not cause a re-render** of our application, this means that we could fire some side-effects, for example checking an input, only if we force in some way a new render of our application (that obviously means that we should store somewhere the value we're working with).
 
-In React we can re-render a component if it's state is changed, in order to manage a state we use the [[useState]] Hook that we can use straight from React or via importing.
+In React we can re-render a component if it's state is changed, in order to manage a state we use the [[React.useState()|useState]] Hook that we can use straight from React or via importing.
 ```js
 // Both are valid syntax
 
@@ -58,7 +58,7 @@ function CustomComponent(){
 	const [state, setState] = React.useState(0);
 }
 ```
-[[useState]] is an Hook that returns an array, we destructure those values with the knowledge that the first value we get is the current state and the second one is a special funcion that allow us to update the value in the state and fire the re-render of our application.
+[[React.useState()|useState]] is an Hook that returns an array, we destructure those values with the knowledge that the first value we get is the current state and the second one is a special function that allow us to update the value in the state and fire the re-render of our application.
 
 In this example having a state that holds the input value comes handy because allows us to check the value of the input at any moment and by re-rendering the component React allows us to show an error message id needed and also disable the submit button.
 
