updates on previous lessons

--- a/1. React Fundamentals/4. Creating custom components.md
+++ b/1. React Fundamentals/4. Creating custom components.md
@@ -33,7 +33,7 @@ Now we can create the custom component and pass the different props like so:
 ```
 Since we can create custom components that get used by other developers it'll be a good idea to specify the kind of props that we want to use within the component. This means that if the component does not get the specific kind of props in the console we can show a proper messege that will help the developer that uses our component.
 
-The first approach is to use the `propTypes` and pass into it a function that will validate the props like so:
+The first approach is to use the special property `propTypes` of the component and pass into it a function that will validate the props like so:
 ```js
 Message.propTypes = {
 	subject(props, propName){
@@ -52,7 +52,7 @@ Message.propTypes = {
 	},
 }
 ```
-We can already see that there is a lot of duplicated code doing so and even if we can simplify the situation creating a `PropType` object that will have specific methods for validate the props:
+React will run all the code against our component but we can already see that there is a lot of duplicated code doing so and even if we can simplify the situation creating a `PropType` object that will have specific methods for validate the props:
 ```js
 const PropTypes = {
   string(props, propName, componentName) {
