--- a/2. React Hooks/5. useRef and useEffect DOM interaction.md
+++ b/2. React Hooks/5. useRef and useEffect DOM interaction.md
@@ -19,4 +19,4 @@ Most of the time we use [[React.useEffect()|useEffect]] because even React **can
 
 In this exercise we need to access to the DOM because the library that we use, `vanilla-tilt`, works directly with the DOM and for this reason we need to provide a way to the library to access this.
 
-Basically we use [[React.useRef()]|useRef]] any time we want keep a reference to something inside our app (could be a DOM node as this case or a [[React Element]]) without firing a re-render. This reference is mutable, means that it'll update its `current` property based on what happen to the reference.
+Basically we use [[React.useRef()|useRef]] any time we want keep a reference to something inside our app (could be a DOM node as this case or a [[React Element]]) without firing a re-render. This reference is mutable, means that it'll update its `current` property based on what happen to the reference.
