Notes lesson 3 ARH

--- a/3. Advanced React Hooks/2. useCallback custom hooks.md
+++ b/3. Advanced React Hooks/2. useCallback custom hooks.md
@@ -1,4 +1,4 @@
-It's time to dig deeper in the [[React.useEffect()|useEffect]] Hook. In the previous lessons ( [[2. useEffect 'persistent state'|this]] and [[6. useEffect HTTP requests|this]]) we discovered the `useEffect` Hook and how we can keep it in sync with the state of the app without let it run every time.
+It's time to dig deeper in the [[React.useEffect()|useEffect]] Hook. In the previous lessons ([[2. useEffect 'persistent state'|this]] and [[6. useEffect HTTP requests|this]]) we discovered the `useEffect` Hook and how we can keep it in sync with the state of the app without let it run every time.
 
 To handle the *'runs'* of `useEffect` we have to pass to it an array that will holds all the values that, if changed, will require the Hook to run. It is common to put data in there but in some cases we could call an external function inside our Hook and the things here get's a bit complicated.
 ```js
@@ -7,7 +7,7 @@ React.useEffect(() => {
   updateLocalStorage()
 }, [])
 ```
-As this Hook has been written it'll run only once after the render of the component. This is a **not good solution** because if our `count` changes during the life of our component we will never save it to [[localStorage]].
+As this Hook has been written it'll run only once after the render of the component. This is **not a good solution** because if our `count` changes during the life of our component we will never save it to [[localStorage]].
 
 We can think of passing the `count` variable as a dependency of our [[React.useEffect()|useEffect]] but what happen if the function changes?
 ```js
