Update 2. useEffect 'persistent state'.md
added default val

--- a/2. React Hooks/2. useEffect 'persistent state'.md
+++ b/2. React Hooks/2. useEffect 'persistent state'.md
@@ -87,7 +87,7 @@ To do so we add a new parameter `option` (an object) to our custom Hook and we c
 function useLocalStorageState(
 	key, 
 	defaultValue = '',
-	{ serialize = JSON.stringify, deserialize = JSON.parse} // Destructured options
+	{ serialize = JSON.stringify, deserialize = JSON.parse} = {} // Destructured options
 ) {
 ```
 
