--- a/1. React Fundamentals/5. Styling.md
+++ b/1. React Fundamentals/5. Styling.md
@@ -1,4 +1,4 @@
-In order to style a React component we can use [[inline styles]] or [[classNames]]. While using the inline styles is not the preferred way when you need to do so there is a little difference from common HTML.
+In order to style a React component we can use [[inline styles]] or [[JavaScript/classNames]]. While using the inline styles is not the preferred way when you need to do so there is a little difference from common HTML.
 In HTML to define some stiles for an element you write something like this:
 ```html
 <div style="font-size: 12px; background-color: lightblue"></div>
